# IN4110

./: README.md
assignment1/: friendly_greeting.txt  gitconflict.txt  less_friendly_greeting.txt
assignment2/: Array.ipynb  README.md  array_class.py  test_array.py  tests.ipynb
assignment3/: README.md  Untitled.ipynb  pyproject.toml  timing-report.txt
assignment3/instapy/: __init__.py  cli.py  cython_filters.c  cython_filters.html  cython_filters.pyx  numba_filters.py  numpy_filters.py  python_filters.py  timing.py
assignment3/instapy.egg-info/: PKG-INFO  requires.txt
assignment3/test/: test_cython.py  test_numba.py  test_numpy.py  test_python.py
assignment4/: README.md  Untitled.ipynb  articles.txt  collect_dates.py  dates.txt  fetch_player_statistics.py  filter_urls.py  output.txt  requesting_urls.py  time_planner.py  url.txt
assignment5/: README.md  app.py  http_cache.sqlite  strompris.py
